app/src/styles/App.scss
/* ... */
// NavLinks
.navlinks {
    display: initial;

    &_wrapper {
        display: flex;
        flex-flow: row nowrap;
    }

    .nhsuk-header__navigation-title {
        color: $color_nhsuk-white;
    }

    .nhsuk-header__navigation-close {
        display: none;
    }

    &_item {
        a {
            color: $color_nhsuk-white;
            text-decoration: underline;
            text-decoration-color: $color_nhsuk-white;
            text-underline-offset: 2px;
        }

        a:hover {
            text-decoration: none;
        }

        a:visited {
            color: $color_nhsuk-white;
        }

        &--desktop {
            margin: 0 2rem;
        }
    }
}

// Generic
.pdfobject-container:focus {
    border: 2px solid #212b32;
    outline: 4px solid #ffeb3b;
    outline-offset: 0;
}

.deletion-complete {
    width: 711px;

    &_card {
        &_content {
            padding: 95px 76px;
            text-align: center;
            background-color: $color_nhsuk-blue;
            color: #fff;
            font-weight: 400;
            font-size: 1.5rem !important;
            white-space: pre-wrap;

            &_header {
                font-weight: 700;
                font-size: 3rem;
                margin-bottom: 25px;
            }

            &_subheader {
                font-weight: 700;
                margin-top: 25px;
            }

            &_description {
                font-size: 1.5rem !important;
            }
        }
    }
}

.document-list-view-list li {
    font-size: 1rem;
    list-style-type: none;
}

.link-button {
    background: none;
    border: none;
    font: inherit;
    outline: inherit;
    -webkit-font-smoothing: antialiased;
    padding: 0;
    border-spacing: 0;
    box-sizing: inherit;
    text-align: left;
    color: $color_nhsuk-blue;
    text-decoration: underline;

    &:hover {
        color: #7c2855;
        text-decoration: none;
    }

    &:active {
        color: #002f5c;
    }

    &:focus {
        @include link-focus;
    }
}

.nhsuk-error-summary__list div {
    margin-bottom: 24px;
}

// Helper

@-moz-document url-prefix() {
    #pdf-viewer {
        margin-top: 6px;
    }
}

.clickable {
    cursor: pointer;
}

.table-column-header {
    font-size: 1.5rem;
}

.separator {
    border-bottom: solid 1px $color_nhsuk-grey-3;
    margin-bottom: 48px;
}

.govuk-phase-banner {
    background: #fff;
    border: none;
}

.govuk-phase-banner__content__tag {
    text-transform: none;
}

.govuk-warning-text__icon {
    border: 3px solid $color_nhsuk-yellow;
    background: $color_nhsuk-yellow;
    color: $nhsuk-text-color;
}

.govuk-warning-text {
    display: flex;
    align-items: center;
}

.nhs-warning-color {
    color: $color_nhsuk-red;
}

.feedback-page_inset-text {
    background-color: #fff;
}

